# YASSi

./: CMakeLists.txt  README.md
01_back_end/: CMakeLists.txt
01_back_end/01_src/01_symbolic_backend/: CMakeLists.txt
01_back_end/01_src/01_symbolic_backend/01_core/: CMakeLists.txt
01_back_end/01_src/01_symbolic_backend/01_core/intrinsics/: yassi_intrinsics.cpp  yassi_intrinsics.hpp
01_back_end/01_src/01_symbolic_backend/01_core/memory/: yassi_memory.cpp  yassi_memory.hpp  yassi_memoryexporter.cpp  yassi_memoryexporter.hpp
01_back_end/01_src/01_symbolic_backend/01_core/solver/: yassi_allsat.cpp  yassi_allsat.hpp  yassi_arithmetic_operators.cpp  yassi_arithmetic_operators.hpp  yassi_compare_operators.cpp  yassi_compare_operators.hpp  yassi_forcefree.cpp  yassi_forcefree.hpp  yassi_fpa.cpp  yassi_fpa.hpp  yassi_loadstore.cpp  yassi_loadstore.hpp  yassi_pointerinstruction.cpp  yassi_pointerinstruction.hpp  yassi_propagation.cpp  yassi_propagation.hpp  yassi_solver.cpp  yassi_solver.hpp  yassi_symbolicexecutor.cpp  yassi_symbolicexecutor.hpp  yassi_typecast.cpp  yassi_typecast.hpp  yassi_z3utils.cpp  yassi_z3utils.hpp
01_back_end/01_src/01_symbolic_backend/01_core/variables/: yassi_arrayvariable.cpp  yassi_arrayvariable.hpp  yassi_basevariable.cpp  yassi_basevariable.hpp  yassi_boolvariable.cpp  yassi_boolvariable.hpp  yassi_functionvariable.cpp  yassi_functionvariable.hpp  yassi_integervariable.cpp  yassi_integervariable.hpp  yassi_pointervariable.cpp  yassi_pointervariable.hpp  yassi_realvariable.cpp  yassi_realvariable.hpp  yassi_structvariable.cpp  yassi_structvariable.hpp  yassi_variablefactory.cpp  yassi_variablefactory.hpp  yassi_variables.hpp  yassi_voidvariable.cpp  yassi_voidvariable.hpp
01_back_end/01_src/01_symbolic_backend/01_core/wrapper/: yassi_backend.cpp  yassi_backend.hpp  yassi_backend_wrapper.cpp  yassi_backend_wrapper.hpp  yassi_object.cpp  yassi_object.hpp
01_back_end/01_src/01_symbolic_backend/02_utils/: yassi_callstack.cpp  yassi_callstack.hpp  yassi_database.cpp  yassi_database.hpp  yassi_llvm_enums.hpp  yassi_logger.cpp  yassi_logger.hpp  yassi_namemangling.cpp  yassi_namemangling.hpp  yassi_pathstack.cpp  yassi_pathstack.hpp  yassi_runtimeexception.cpp  yassi_runtimeexception.hpp  yassi_timer.cpp  yassi_timer.hpp  yassi_utils.cpp  yassi_utils.hpp
01_back_end/01_src/02_replay_backend/: CMakeLists.txt
01_back_end/01_src/02_replay_backend/01_core/: CMakeLists.txt
01_back_end/01_src/02_replay_backend/01_core/observer/: yassi_observemodel.cpp  yassi_observemodel.hpp
01_back_end/01_src/02_replay_backend/01_core/stimulator/: yassi_stimulatemodel.cpp  yassi_stimulatemodel.hpp
01_back_end/01_src/02_replay_backend/01_core/wrapper/: yassi_object.cpp  yassi_object.hpp  yassi_replay.cpp  yassi_replay.hpp  yassi_replay_wrapper.cpp  yassi_replay_wrapper.hpp
01_back_end/01_src/02_replay_backend/02_utils/: yassi_database.cpp  yassi_database.hpp  yassi_logger.cpp  yassi_logger.hpp
02_front_end/: CMakeLists.txt
02_front_end/01_src/: CMakeLists.txt  main.cpp  yassi.ascii  yassi_bdd.cpp  yassi_bdd.hpp  yassi_bitcode.cpp  yassi_bitcode.hpp  yassi_checkmodel.cpp  yassi_checkmodel.hpp  yassi_common.cpp  yassi_common.hpp  yassi_executor.cpp  yassi_executor.hpp  yassi_frontend.cpp  yassi_frontend.hpp  yassi_object.cpp  yassi_object.hpp  yassi_version.hpp
02_front_end/01_src/debug/: yassi_errorlocalization.cpp  yassi_errorlocalization.hpp
02_front_end/01_src/replay/: yassi_replay.cpp  yassi_replay.hpp  yassi_testvectors.cpp  yassi_testvectors.hpp
02_front_end/01_src/utils/: yassi_database.cpp  yassi_database.hpp  yassi_logger.cpp  yassi_logger.hpp  yassi_timer.cpp  yassi_timer.hpp  yassi_utils.cpp  yassi_utils.hpp
03_llvm_opt_pass/: CMakeLists.txt  Makefile
03_llvm_opt_pass/01_YassiInstr/: CMakeLists.txt  yassi_instrumentation_pass.cpp  yassi_instrumentation_pass.hpp
03_llvm_opt_pass/01_YassiInstr/01_src/: yassi_alloca.cpp  yassi_alloca.hpp  yassi_basicblocks.cpp  yassi_basicblocks.hpp  yassi_beginend.cpp  yassi_beginend.hpp  yassi_binaryop.cpp  yassi_binaryop.hpp  yassi_branch.cpp  yassi_branch.hpp  yassi_cast.cpp  yassi_cast.hpp  yassi_changeassertfunction.cpp  yassi_changeassertfunction.hpp  yassi_changeassumefunction.cpp  yassi_changeassumefunction.hpp  yassi_changeerrorfunction.cpp  yassi_changeerrorfunction.hpp  yassi_changemallocfree.cpp  yassi_changemallocfree.hpp  yassi_changeprintf.cpp  yassi_changeprintf.hpp  yassi_cleanphi.cpp  yassi_cleanphi.hpp  yassi_cmdline_arguments.cpp  yassi_cmdline_arguments.hpp  yassi_compare.cpp  yassi_compare.hpp  yassi_explore_external_functions.cpp  yassi_explore_external_functions.hpp  yassi_functioncall.cpp  yassi_functioncall.hpp  yassi_functionpointer.cpp  yassi_functionpointer.hpp  yassi_functions.cpp  yassi_functions.hpp  yassi_getelementptr.cpp  yassi_getelementptr.hpp  yassi_globalinit.cpp  yassi_globalinit.hpp  (+22 more)
03_llvm_opt_pass/02_YassiReplay/: CMakeLists.txt  yassi_replay_pass.cpp  yassi_replay_pass.hpp
03_llvm_opt_pass/02_YassiReplay/01_src/: yassi_basicblocks.cpp  yassi_basicblocks.hpp  yassi_beginend.cpp  yassi_beginend.hpp  yassi_branch.cpp  yassi_branch.hpp  yassi_changeassigns.cpp  yassi_changeassigns.hpp  yassi_changemainmeasure.cpp  yassi_changemainmeasure.hpp  yassi_functions.cpp  yassi_functions.hpp  yassi_remove_nondet_functions.cpp  yassi_remove_nondet_functions.hpp  yassi_removeforcefree.cpp  yassi_removeforcefree.hpp  yassi_replaybase.cpp  yassi_replaybase.hpp
03_llvm_opt_pass/03_YassiDebug/: CMakeLists.txt  yassi_debug_pass.cpp  yassi_debug_pass.hpp
03_llvm_opt_pass/03_YassiDebug/01_src/: yassi_force.cpp  yassi_force.hpp  yassi_selectvariables.cpp  yassi_selectvariables.hpp
04_utils/: CMakeLists.txt
04_utils/03_datastructures/: CMakeLists.txt  yassi_datastructuretree.cpp  yassi_datastructuretree.hpp  yassi_datastructuretree_testbench.cpp  yassi_genericdatastructures.hpp
06_test/01_src/: CMakeLists.txt  main.cpp  main.cpp~  unittest_simple.hpp  yassi_testengine.cpp  yassi_testengine.hpp
06_test/03_tools/01_export_unittest_cases/: CMakeLists.txt  main.cpp
(+485 files in other folders)
